Fix hooks imports, replace sass spacing variables with css variables

--- a/src/hooks/useSetFocus/__stories__/useSetFocus.stories.module.scss
+++ b/src/hooks/useSetFocus/__stories__/useSetFocus.stories.module.scss
@@ -1,10 +1,8 @@
-@import "../../../styles/global-css-settings.scss";
-
 .controlButton {
-  margin-top: $spacing-medium;
+  margin-top: var(--spacing-medium);
   width: 80px;
 }
 
 .focusLabel {
-  margin-top: $spacing-medium;
+  margin-top: var(--spacing-medium);
 }
